--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "bottender": "1.5.1-alpha.9"
+    "bottender": "1.5.1-alpha.9",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
