--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "devbottender": "bottender dev",
     "dev": "nodemon server.js",
     "lint": "eslint . ",
     "start": "bottender start",
     "test": "jest",
-    "ngrok": "ngrok http 4040 > /dev/null &"
+    "ngrok": "ngrok http 4040"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "bottender": "1.5.1-alpha.9",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
