--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "devbottender": "bottender dev",
-    "dev": "node -r dotenv/config ./src/bin/dev",
     "lint": "eslint . ",
-    "start": "bottender start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "node -r dotenv/config ./src/bin/dev",
+    "start": "NODE_ENV=production node ./src/server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
